Moved navbar to side and solved background gradient. Mobile welcome page finished

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <main>
-        <div>
+        <div id="title">
             <p>Bienvenido al portfolio de</p>
             <h1>Daniel <span id="lastname">Carrasco</span></h1>
             <hr>
