Fixed welcome page and finished contacto.html (mobile)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-    <header>
-        <label for="check" id="hamburger-btn"><span id="hamburger-span"></span></label>
+    <label for="check" id="hamburger-btn"><span id="hamburger-span"></span></label>
         <input type="checkbox" name="check" id="check">
+    <header>
+        
         <nav>
             <ul>
                 <li class="nav-list-item"><a href="./index.html" class="nav-link">Home</a></li>
@@ -23,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main-index">
         <div id="title">
             <p>Bienvenido al portfolio de</p>
             <h1>Daniel <span id="lastname">Carrasco</span></h1>
