Added biography.html and protfolio.html, finished mobile view

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <label for="check" id="hamburger-btn"><span id="hamburger-span"></span></label>
-        <input type="checkbox" name="check" id="check">
+    <input type="checkbox" name="check" id="check">
     <header>
-        
+
         <nav>
             <ul>
                 <li class="nav-list-item"><a href="./index.html" class="nav-link">Home</a></li>
@@ -33,9 +33,11 @@
         </div>
     </main>
     <footer>
-        <a href="#" class="fa fa-instagram" ></a>
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
+        <div id="social-icons">
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+        </div>
     </footer>
 
 </body>
