Added top nav for laptops

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <nav>
             <ul>
-                <li class="nav-list-item"><a href="./index.html" class="nav-link">Home</a></li>
+                <li class="nav-list-item"><a href="./index.html" class="nav-link" id="button">Home</a></li>
                 <li class="nav-list-item"><a href="./pages/biografia.html" class="nav-link">Biografía</a></li>
                 <li class="nav-list-item"><a href="./pages/portfolio.html" class="nav-link">Portfolio</a></li>
                 <li class="nav-list-item"><a href="./pages/contacto.html" class="nav-link">Contacto</a></li>
