Added new footer, added some lame flexbox

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,6 +53,11 @@
         </section>
     </main>
     <footer>
+        <div id="div-footer">
+            <p>&copy; All rights reserved<br>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>
+                C/ Lorem, s/n, 28037 Ipsum, Wakanda</p>
+        </div>
         <div id="social-icons">
             <a href="#" class="fa fa-instagram"></a>
             <a href="#" class="fa fa-facebook"></a>
