--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -37,10 +37,10 @@
                         <img src="../assets/img/caballos-acordeon.jpg" alt="">
                     </figure>
                     <figure>
-                        <img src="../assets/img/piña-gafas.jpg" alt="">
+                        <img src="../assets/img/oso-saludando.jpg" alt="">
                     </figure>
                     <figure>
-                        <img src="../assets/img/oso-saludando.jpg" alt="">
+                        <img src="../assets/img/piña-gafas.jpg" alt="">
                     </figure>
                     <figure>
                         <img src="../assets/img/fantasma-gafas.jpg" alt="">
@@ -59,6 +59,11 @@
         </section>
     </main>
     <footer>
+        <div id="div-footer">
+            <p>&copy; All rights reserved<br>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>
+                C/ Lorem, s/n, 28037 Ipsum, Wakanda</p>
+        </div>
         <div id="social-icons">
             <a href="#" class="fa fa-instagram"></a>
             <a href="#" class="fa fa-facebook"></a>
