Fixed responsiveness (kind of...), added font-family, changed colors

--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -44,6 +44,7 @@
                     Magni cupiditate, cumque saepe cum expedita facere aut dolor consequatur soluta amet enim modi sit
                     est sequi voluptate temporibus explicabo autem! Perferendis ratione deserunt, odio aliquid impedit
                     provident et eum?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, vero quas debitis magnam porro optio exercitationem sint quaerat sit explicabo.
                     Fugiat ullam, consectetur accusamus minus, obcaecati in similique facere blanditiis, alias
                     distinctio eveniet quibusdam. Hic, quasi? Similique temporibus iure esse dolor dolores labore illum.
                     Quia numquam vero explicabo aspernatur porro?</p>
@@ -60,7 +61,7 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, tenetur. Nam nobis numquam
                     doloribus quaerat eveniet, corporis minima unde est magnam iusto optio dolores minus non voluptatem,
                     laborum quos alias.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, labore.</p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, labore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. A eum minima beatae, nihil maxime pariatur necessitatibus sunt reiciendis recusandae ad.</p>
             </article>
         </section>
     </main>
